css/styles.css
body {
  margin: 0;
  font-family: Poppins, sans-serif;
  font-weight: 300;
  background: #fafafa;
  color: #222;
}

header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: rgb(255, 92, 92);
  color: white;
  padding: 1rem 2rem;
  z-index: 1000;
}

section {
  max-width: 800px;
  margin: 0 auto;
  padding: 0 1rem;
}

h2 {
  margin-top: 2rem;
}

footer {
  text-align: center;
  padding: 1.5rem;
  margin-top: 2rem;
  background: #eee;
}

.title {
  font-size: 100px;
  font-weight: 900;
  color: rgb(255, 92, 92);
}

.fade-in {
  opacity: 0;
  transform: translateY(20px);
  transition: opacity 1s ease, transform 1s ease;
}

.fade-in.visible {
  opacity: 1;
  transform: translateY(0);
}

.small-image {
  display: block;
  margin: 0 auto;
  max-width: 5%;
  height: auto;
}

.hover-image {
  transition: transform 0.3s ease;
}

.hover-image:hover {
  transform: scaleX(5);
}

.x {
  position: absolute;
  color: rgb(255, 235, 235);
  pointer-events: none;
  position: absolute;
  z-index: -1;
}

#preloader {
  top: 0;
  left: 0;
  position: relative;
  height: 100vh;
  width: 100%;
  z-index: 100;
  overflow: hidden;
}

#preload-title {
  top: 0;
  left: 0;
  position: relative;
  height: 100vh;
  width: 100%;
  z-index: 100;
  display: flex;
  justify-content: center;
  box-sizing: border-box;
  align-items: center;
  padding: 0 10vw;
  gap: 16vw;
}

#preload-subtitle {
  position: absolute;
  padding: 0 2rem;
  box-sizing: border-box;
  top: 40px;
  opacity: 0;
  width: 100%;
  height: 100vh;
  display: flex;
  text-align: center;
  justify-content: center;
  align-items: center;
  color: white;
}

#preload-bg-cover {
  top: 0;
  left: 0;
  position: absolute;
  height: 100vh;
  width: 100%;
  background-color: rgb(254, 235, 146);
}

#preload-bg {
  top: 0;
  left: 0;
  position: absolute;
  height: 100vh;
  width: 100%;
  background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.2)),
    url("../assets/img/teto-plush-asteroid.png") no-repeat center / cover;
}

svg {
  width: clamp(10px, 20vw, 150px);
  height: auto;
}

#wide-wrapper {
  top: 0;
  left: 0;
  position: relative;
  height: 300vh;
  width: 100%;
  z-index: 1;
  overflow: hidden;
}

#wide-image {
  position: sticky;
  top: 50vh;
  left: 75vw;
  transform: translate(-50%, -50%);
  transition: left 0.7s ease, opacity 0.5s ease;
  opacity: 0;
  max-width: 800px;
  max-height: 100vh;
  pointer-events: none;
}

